# django-react-cms

./: .gitignore  .gitpod.yml  README.md  docker-compose.yml  fly.toml
client/: Dockerfile  (+2 more)
server/: Dockerfile  manage.py  pyproject.toml
server/djangopress/: adapter.py  adapters.py  apps.py  asgi.py  context_providers.py  models.py  services.py  settings.py  urls.py  utils.py  views.py  widgets.py  wsgi.py
server/djangopress/auth/: apps.py  models.py  services.py  views.py
server/djangopress/auth/migrations/: 0002_user_is_temporary.py
server/djangopress/campaigns/: apps.py  models.py
server/djangopress/channels/instagram/: apps.py  models.py
server/djangopress/channels/linkedin/: apps.py  models.py
server/djangopress/channels/newsletters/: apps.py  models.py
server/djangopress/common/: views.py
server/djangopress/content/: apps.py  models.py
server/djangopress/files/: apps.py  models.py  services.py  views.py
server/djangopress/i18n/: models.py
server/djangopress/media/: apps.py  forms.py  models.py  utils.py  views.py
server/djangopress/migrations/: 0001_initial.py
server/djangopress/models/: __init__.py  content.py  file.py  files.py  workspaces.py
server/djangopress/pages/: apps.py  forms.py  models.py  views.py
server/djangopress/posts/: forms.py  models.py  views.py
server/djangopress/social/: apps.py  models.py
server/djangopress/spaces/: apps.py  decorators.py  models.py  views.py
server/djangopress/workspaces/: apps.py  decorators.py  models.py  services.py
server/djreamdemo/: asgi.py  settings.py  urls.py  wsgi.py
server/djreamdemo/auth/: apps.py
server/djreamdemo/media/: forms.py  models.py
server/djreamdemo/posts/: models.py
server/djreampress/: asgi.py  settings.py  wsgi.py
server/djreampress/auth/: apps.py
server/djreampress/media/: apps.py  views.py
server/djreampress/posts/: apps.py  views.py
server/mezepress/: asgi.py  settings.py  wsgi.py
server/mezepress/auth/: apps.py
server/mezepress/media/: apps.py  views.py
server/mezepress/posts/: apps.py  views.py
(+88 files in other folders)
