[tool.poetry]
name = "djangopress"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "djangopress" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = "^5.0"
psycopg = "^3.1.16"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
sentry-sdk = { extras = ["django"], version = "^2.3.1" }
isort = "^5.13.2"
django-bridge = "^0.5"
whitenoise = "^6.6.0"
pillow = "^10.3.0"
filetype = "^1.2.0"
modelsearch = "^1.0rc6"
elasticsearch = "^9.1.0"
uuid7 = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[tool.isort]
profile = "black"
known_first_party = ["djangopress"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
